# cmaze

./: bitmap.h  gen.c  gen.h  log.txt  main.c  map.c  map.h  meson.build  vector.c  vector.h
backends/: bitmap.cpp  bitmap.h  meson.build  render.cpp  render.h  render.hpp  sdl.cpp  sdl.h  terminal.cpp  terminal.h
