backend_sources = files('render.h',
                        'render.hpp',
                        'terminal.h',
                        'terminal.cpp',
                        'render.cpp',
                        'sdl.cpp',
                        'sdl.h',
                        'bitmap.h',
                        'bitmap.cpp')
sources += backend_sources
